# Summarisation

./: CMakeLists.txt
extract/: CMakeLists.txt  lexrank.cpp  lexrank.h  main.cpp  stopwords.txt
lib/: CMakeLists.txt  ConvertUTF.h  UtfConverter.cpp  UtfConverter.h
prepare/: CMakeLists.txt  prep-vik.cpp  prep-xml.cpp
scripts/: cfg-extract-all.sh  cfg-extract-sizes.sh  cfg-extract.sh  co-bglpc.sh  co-clean.sh  co-describe.sh  co-doit.sh  co-getid-new.sh  co-getid.sh  co-prep-models.sh  co-prep-vik.sh  co-sac.sh  co-select-dir.sh  co-select.sh  co-translate.sh  res-table.sh  run-extract.sh  run-rouge.sh
test/1xxx/: extract-l.cfg  extract-m.cfg  extract-s.cfg  res-l.tsv  res-m.tsv  res-s.tsv  res-short-m.txt  result-l.txt  result-l.xlsx  result-m.txt  result-s.txt  rouge-s.cfg
test/1xxx/models-l/: 00005238nCJL-bg  00005242nCDL-bg  00005580nCZL-bg  00005648nCJL-bg  00005851nCZL-bg  00005881nCZL-bg  00006128nCEL-bg  00006129nCZL-bg  00006136nCZL-bg  00006323nCZL-bg  00006449nCZL-bg  00006452nCZL-bg  00006692nCEL-bg  00006825nCZL-bg  00009992nCEL-bg  00016368nCEB-bg  00020534nCEB-bg  00024748nCEB-bg  00025359nCEB-bg  00027526nCEB-bg  00202099nCEA-bg  00203142nCEB-bg  L00051784bCNA-bg  L00051785bCNA-bg  L00051875bCNA-bg  L00051879bCNA-bg  L00052280bCEA-bg  L00052286bCEA-bg  L00052297bCEA-bg  L00052313bCEA-bg  L00052323bCEA-bg  L00052325bCEA-bg  L00052326bCEA-bg  L00052469bCEA-bg  L00052777bCEA-bg  L00052783bCEA-bg  L00052809bCEA-bg  L00052812bCEA-bg  L00052836bCEA-bg  L00052848bCEA-bg  (+17 more)
test/1xxx/models-m/: 00005238nCJL-bg  00005242nCDL-bg  00005580nCZL-bg  00005648nCJL-bg  00005851nCZL-bg  00005881nCZL-bg  00006128nCEL-bg  00006129nCZL-bg  00006136nCZL-bg  00006323nCZL-bg  00006449nCZL-bg  00006452nCZL-bg  00006692nCEL-bg  00006825nCZL-bg  00009992nCEL-bg  00016368nCEB-bg  00020534nCEB-bg  00024748nCEB-bg  00025359nCEB-bg  00027526nCEB-bg  00202099nCEA-bg  00203142nCEB-bg  L00051784bCNA-bg  L00051785bCNA-bg  L00051875bCNA-bg  L00051879bCNA-bg  L00052280bCEA-bg  L00052286bCEA-bg  L00052297bCEA-bg  L00052313bCEA-bg  L00052323bCEA-bg  L00052325bCEA-bg  L00052326bCEA-bg  L00052469bCEA-bg  L00052777bCEA-bg  L00052783bCEA-bg  L00052809bCEA-bg  L00052812bCEA-bg  L00052836bCEA-bg  L00052848bCEA-bg  (+17 more)
test/1xxx/models-s/: 00005238nCJL-bg  00005242nCDL-bg  00005580nCZL-bg  00005648nCJL-bg  00005851nCZL-bg  00005881nCZL-bg  00006128nCEL-bg  00006129nCZL-bg  00006136nCZL-bg  00006323nCZL-bg  00006449nCZL-bg  00006452nCZL-bg  00006692nCEL-bg  00006825nCZL-bg  00009992nCEL-bg  00016368nCEB-bg  00020534nCEB-bg  (+40 more)
test/2xxx/: extract-l.cfg  extract-m.cfg  extract-s.cfg  res-l.tsv  res-m.tsv  res-s.tsv  result-l.txt  result-m.txt  result-s.txt  rouge-l.cfg  rouge-m.cfg
test/mss-bg/: extract.cfg  res-short.txt  res.tsv  result.txt  sizes.cfg
test/personal/: extract.cfg  res.tsv  result.txt  rouge.cfg
tools/ROUGE/: ROUGE-1.5.6.pl
tools/SummaryAnnotationTools/: README.md
(+2467 files in other folders)
